Landing: Fixing errors with different sizes Navbar-Menu: FIxing overlapping with flag

--- a/anmeldung/static/css/header.css
+++ b/anmeldung/static/css/header.css
@@ -439,7 +439,7 @@ width: 100px;
 left: 50%;
 position: relative;
 border: 1px solid rgba(0, 0, 0, 0.125);
-margin-top: -385px;
+margin-top: -435px;
 margin-left: -50px;
 }
 
